# Social-Network-DRF

./: Makefile  README.md  pyproject.toml
config/: settings.py  urls.py
content/: admin.py  apps.py  models.py  serializers.py  views.py
content/migrations/: 0001_initial.py  0002_auto_20210323_0203.py  0003_post_author.py  0004_auto_20210323_1414.py  0005_auto_20210323_1456.py  0006_auto_20210323_1512.py
content/tests/: test_api.py
user/: admin.py  models.py  serializers.py
user/migrations/: 0001_initial.py
